--- a/css/main.css
+++ b/css/main.css
@@ -156,9 +156,8 @@ p {
 .favorites {
 	position: fixed;
 	top: 15px;
-	width: auto;
-	left: 25%;
 	display: flex;
+	justify-content: center;
 	background-color: #3b757f;
 	border-radius: 10px;
 	border: 2px solid black;
